# hardware_spec_pc

./: package.json  pnpm-lock.yaml
.github/workflows/: release.yaml
src/: App.tsx  Layout.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/event/: mod.rs
src-tauri/src/system/: common.rs  mod.rs
src-tauri/src/system/mac/: cpu.rs  disk.rs  dto.rs  gpu.rs  memory.rs  mod.rs  os.rs
src-tauri/src/system/windows/: cpu.rs  disk.rs  dto.rs  gpu.rs  memory.rs  mod.rs  motherboard.rs  os.rs  platform.rs
src-tauri/src/system/windows/native/: win32_disk.rs
src/components/: EstimateButton.tsx  HardwarePanel.tsx  SystemInfo.tsx
src/components/hooks/: useEstimate.ts  useSystemInfo.ts
src/constants/: cpuConstants.ts  diskConstants.ts  gpuConstants.ts  motherboardConstants.ts  ram.constants.ts  ramConstants.ts  url.ts
src/hooks/: useEstimate.ts  useSystemInfo.ts
src/lib/: reactQuery.tsx
src/pages/: Home.tsx  Loading.tsx  NotFound.tsx
src/services/common/: localStorageService.ts
src/services/estimate/: estimateId.ts  id.ts
src/services/system/: formatService.ts  systemInfoService.ts
src/services/system/format/: commonFormatService.ts  cpuFormatService.ts  diskFormatService.ts  gpuFormatService.ts  motherboardFormatService.ts  ramFormatService.ts
src/services/tauri/invoke/: invoke.ts
src/types/dto/: commonDto.ts
src/types/dto/estimate/: estimateDto.ts
src/types/dto/mac/: diskDto.ts  systemDto.ts
src/types/dto/response/: responseType.ts
src/types/dto/windows/: diskDto.ts  gpuDto.ts  ramDto.ts  systemDto.ts
src/types/model/computer/: commonType.ts  computerType.ts  cpuType.ts  diskType.ts  gpuType.ts  motherboardType.ts  osType.ts  ramType.ts
